tests/compiletests/ui/lang/fn-ptrs-errs.default.stderr
error: function pointer types are not allowed
  --> $DIR/fn-ptrs-errs.rs:19:1
   |
LL | pub fn main_foo(out_fn: &mut fn(), out_dyn: &mut &'static dyn Iterator<Item = u32>) {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: used by unnamed global (%149)
   = note: used by unnamed global (%157)
note: used from within `fn_ptrs_errs::main_foo`
  --> $DIR/fn-ptrs-errs.rs:19:8
   |
LL | pub fn main_foo(out_fn: &mut fn(), out_dyn: &mut &'static dyn Iterator<Item = u32>) {
   |        ^^^^^^^^
note: called by `main_foo`
  --> $DIR/fn-ptrs-errs.rs:19:8
   |
LL | pub fn main_foo(out_fn: &mut fn(), out_dyn: &mut &'static dyn Iterator<Item = u32>) {
   |        ^^^^^^^^

error: unsupported function pointer to `fn_ptrs_errs::foo`
  --> $DIR/fn-ptrs-errs.rs:20:5
   |
LL |     *out_fn = foo;
   |     ^^^^^^^^^^^^^
   |
note: used from within `fn_ptrs_errs::main_foo`
  --> $DIR/fn-ptrs-errs.rs:20:5
   |
LL |     *out_fn = foo;
   |     ^^^^^^^^^^^^^
note: called by `main_foo`
  --> $DIR/fn-ptrs-errs.rs:19:8
   |
LL | pub fn main_foo(out_fn: &mut fn(), out_dyn: &mut &'static dyn Iterator<Item = u32>) {
   |        ^^^^^^^^

error: constants cannot contain bitcasts
       from `*struct core::ops::Range<u32> { start: u32, end: u32 }`
         to `*struct dyn core::iter::Iterator<Item = u32> {  }`
  --> $DIR/fn-ptrs-errs.rs:21:5
   |
LL |     *out_dyn = &(0..10);
   |     ^^^^^^^^^^^^^^^^^^^
   |
note: used from within `fn_ptrs_errs::main_foo`
  --> $DIR/fn-ptrs-errs.rs:21:5
   |
LL |     *out_dyn = &(0..10);
   |     ^^^^^^^^^^^^^^^^^^^
note: called by `main_foo`
  --> $DIR/fn-ptrs-errs.rs:19:8
   |
LL | pub fn main_foo(out_fn: &mut fn(), out_dyn: &mut &'static dyn Iterator<Item = u32>) {
   |        ^^^^^^^^

error: unsupported function pointer to `<core::ops::range::Range<u32> as core::iter::traits::iterator::Iterator>::next`
  --> $DIR/fn-ptrs-errs.rs:21:5
   |
LL |     *out_dyn = &(0..10);
   |     ^^^^^^^^^^^^^^^^^^^
   |
note: used from within `fn_ptrs_errs::main_foo`
  --> $DIR/fn-ptrs-errs.rs:21:5
   |
LL |     *out_dyn = &(0..10);
   |     ^^^^^^^^^^^^^^^^^^^
note: called by `main_foo`
  --> $DIR/fn-ptrs-errs.rs:19:8
   |
LL | pub fn main_foo(out_fn: &mut fn(), out_dyn: &mut &'static dyn Iterator<Item = u32>) {
   |        ^^^^^^^^

error: function pointer types are not allowed
  --> $DIR/fn-ptrs-errs.rs:19:1
   |
LL | pub fn main_foo(out_fn: &mut fn(), out_dyn: &mut &'static dyn Iterator<Item = u32>) {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: used by unnamed global (%149)
   = note: used by `out_fn`

error: function pointer types are not allowed
  --> $DIR/fn-ptrs-errs.rs:19:1
   |
LL | pub fn main_foo(out_fn: &mut fn(), out_dyn: &mut &'static dyn Iterator<Item = u32>) {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: used by unnamed global (%149)
   = note: used by unnamed global (%183)
note: used from within `fn_ptrs_errs::main_bar`
  --> $DIR/fn-ptrs-errs.rs:25:8
   |
LL | pub fn main_bar(out_fn: &mut fn(), out_dyn: &mut &'static dyn Fn(&mut Range<u32>) -> Option<u32>) {
   |        ^^^^^^^^
note: called by `main_bar`
  --> $DIR/fn-ptrs-errs.rs:25:8
   |
LL | pub fn main_bar(out_fn: &mut fn(), out_dyn: &mut &'static dyn Fn(&mut Range<u32>) -> Option<u32>) {
   |        ^^^^^^^^

error: unsupported function pointer to `fn_ptrs_errs::bar`
  --> $DIR/fn-ptrs-errs.rs:26:5
   |
LL |     *out_fn = bar;
   |     ^^^^^^^^^^^^^
   |
note: used from within `fn_ptrs_errs::main_bar`
  --> $DIR/fn-ptrs-errs.rs:26:5
   |
LL |     *out_fn = bar;
   |     ^^^^^^^^^^^^^
note: called by `main_bar`
  --> $DIR/fn-ptrs-errs.rs:25:8
   |
LL | pub fn main_bar(out_fn: &mut fn(), out_dyn: &mut &'static dyn Fn(&mut Range<u32>) -> Option<u32>) {
   |        ^^^^^^^^

error: constants cannot contain bitcasts
       from `*struct {closure@$DIR/fn-ptrs-errs.rs:27:17: 27:20} {  }`
         to `*struct dyn core::iter::Iterator<Item = u32> {  }`
  --> $DIR/fn-ptrs-errs.rs:27:5
   |
LL |     *out_dyn = &|r| Some(r.end - r.start);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: used from within `fn_ptrs_errs::main_bar`
  --> $DIR/fn-ptrs-errs.rs:27:5
   |
LL |     *out_dyn = &|r| Some(r.end - r.start);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: called by `main_bar`
  --> $DIR/fn-ptrs-errs.rs:25:8
   |
LL | pub fn main_bar(out_fn: &mut fn(), out_dyn: &mut &'static dyn Fn(&mut Range<u32>) -> Option<u32>) {
   |        ^^^^^^^^

error: unsupported function pointer to `<fn_ptrs_errs::main_bar::{closure#0} as core::ops::function::FnOnce<(&mut core::ops::range::Range<u32>,)>>::call_once::{shim:vtable#0}`
  --> $DIR/fn-ptrs-errs.rs:27:5
   |
LL |     *out_dyn = &|r| Some(r.end - r.start);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: used from within `fn_ptrs_errs::main_bar`
  --> $DIR/fn-ptrs-errs.rs:27:5
   |
LL |     *out_dyn = &|r| Some(r.end - r.start);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: called by `main_bar`
  --> $DIR/fn-ptrs-errs.rs:25:8
   |
LL | pub fn main_bar(out_fn: &mut fn(), out_dyn: &mut &'static dyn Fn(&mut Range<u32>) -> Option<u32>) {
   |        ^^^^^^^^

error: aborting due to 9 previous errors

